--- a/templates/secondarynav.mustache
+++ b/templates/secondarynav.mustache
@@ -8,6 +8,7 @@
             {{#secondarymoremenu}}
                 <div class="secondary-navigation d-print-none apoa-nav">
                     {{> core/moremenu}}
+                    {{> theme_boost/primary-drawer-mobile }}
                 </div>
             {{/secondarymoremenu}}
         </div>
