--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -250,16 +250,17 @@
   
   @media (min-width: 962px) {
     .main-page-sec-image {
-      max-height: none!important;
+      //max-height: none!important;
     }
   }
 
   .main-page-sec-image {
-    max-height: 150px;
+    max-height: 120px;
     object-fit: cover;
     /*object-position: right;*/
+    max-width: 100%;
     width: 100%;
-    height: 100%;
+    min-height: 120px;
     overflow: hidden;
   }
 
