--- a/templates/mainpage/jumbo/jumbomodal.mustache
+++ b/templates/mainpage/jumbo/jumbomodal.mustache
@@ -7,7 +7,7 @@
                     <div id="slide-{{index}}" class="swiper-slide" style="height: 100%;" data-src="" data-control-id="{{index}}">
                         <a class="stretched-link main-page-link-wrapper" href=""></a>
                         <div class="card main-page-jumbo-main w-100 border-0">
-                            <img class="card-img w-100 d-block main-page-main-image rounded-0 zoom-enabled" style="filter:brightness(0.93); object-fit:contain; object-position:center; background-color: var(--primary);" src="#" data-bound="false"/>
+                            <img class="card-img w-100 d-block main-page-main-image rounded-0 zoom-enabled" style="filter:brightness(0.93); object-fit:contain; object-position:center; background-color: var(--primary); height:100%;" src="#" data-bound="false"/>
                         </div>
                     </div>
                     {{/indexes}}
