fixed scrolling, added resources region

--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -132,7 +132,7 @@
             {{{ output.full_header }}}
             {{{ output.has_active_subscription }}}
             {{{ output.has_federation_pending }}}
-            <div id="page-content" class="pb-3 d-print-block">
+            <div id="page-content" class="pb-3 d-print-block px-4 px-md-0">
                 <div id="region-main-box">
                     {{#hasregionmainsettingsmenu}}
                     <div id="region-main-settings-menu" class="d-print-none">
