made resource non cacheable

--- a/templates/mainpage/resources.mustache
+++ b/templates/mainpage/resources.mustache
@@ -1,7 +1,5 @@
 <h4 class="text-center text-primary">Popular Resources</h4>
-        {{{resources}}}
-        {{{addblockbutton}}}
         {{#resources}}
-            {{{blocks}}}
+            {{{blocks.get_block_region_resources}}}
         {{/resources}}
 </div>
