added notifications js

--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -131,7 +131,8 @@
             {{/secondarymoremenu}}
             {{{ output.full_header }}}
             {{{ output.has_active_subscription }}}
-            {{{ output.has_federation_pending }}}
+            {{{ output.has_membership_category_approved }}}
+            {{{ output.load_js}}}
             <div id="page-content" class="pb-3 d-print-block px-4 px-md-0">
                 <div id="region-main-box">
                     {{#hasregionmainsettingsmenu}}
