--- a/templates/category.mustache
+++ b/templates/category.mustache
@@ -54,7 +54,11 @@
                 {{/categorylist}}
         </div>
     </div>
-    <h3 class="text-primary text-center text-underline">Our Journals</h3>
+    {{#moresubcategorytitle}}
+        <h3 class="text-primary text-center text-underline">
+            {{moresubcategorytitle}}
+        </h3>
+    {{/#moresubcategorytitle}}
     <div class="row pt-3 mx-0 main-page-section-top-border">
         {{#categorylist}}
             {{^firsttab}}
