adjusted section themeing

--- a/templates/category.mustache
+++ b/templates/category.mustache
@@ -54,11 +54,8 @@
                 {{/categorylist}}
         </div>
     </div>
-    {{#moresubcategorytitle}}
-        <h3 class="text-primary text-center text-underline">
-            {{moresubcategorytitle}}
-        </h3>
-    {{/#moresubcategorytitle}}
+    <h3 class="text-primary text-center text-underline">Our Journals
+    </h3>
     <div class="row pt-3 mx-0 main-page-section-top-border">
         {{#categorylist}}
             {{^firsttab}}
