--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -1015,6 +1015,7 @@
     background-color: rgba(203, 30, 111, 0.8);
     padding-left: 0.2rem;
     padding-right: 0.2rem;
+    min-width: 50%!important;
   }
 
   .primary-navigation .navigation .nav-link{
