added lti template

--- a/templates/enrol_lti/local/ltiadvantage/content_select.mustache
+++ b/templates/enrol_lti/local/ltiadvantage/content_select.mustache
@@ -105,7 +105,7 @@
                                 {{^lineitem}}
                                 <td>-</td>
                                 {{/lineitem}}
-                                <td><input type="text" name="url[]" value="hello"></td>
+                                <td><input type="text" name="urls[]" value="hello"></td>
                             </tr>
                         {{/modules}}
                     {{/courses}}
