--- a/templates/landing.mustache
+++ b/templates/landing.mustache
@@ -485,7 +485,7 @@
                     <div class="col"><a class="stretched-link main-page-link-wrapper" href="#"></a>
                         <div class="card main-page-card main-page-sub-list-group-item mb-2"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="assets/img/Logos/apoffs-logo.png">
                             <div class="card-body py-0">
-                                <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Osteoperosis</h5>
+                                <h5 class="card-title journal-card-sub-title mb-1 main-page-subsection-title main-page-link">Osteoporosis</h5>
                             </div>
                         </div>
                     </div>
