--- a/scss/post.scss
+++ b/scss/post.scss
@@ -249,12 +249,14 @@ top: 0%;
 }
 
 .countdown{
+  display: none;
   bottom: 5%;
   background: rgb(2 0 1 / 30%);
   border: 1px white;
   border-style: solid;
   position: absolute;
 }
+
 
 .card-columns {
   @include media-breakpoint-only(sm) {
@@ -293,4 +295,8 @@ top: 0%;
 
 .course-description-item{
   padding-left: 5px!important;
+}
+
+#id_title_search_group_journal_select{
+  max-width: 75%!important;
 }
