--- a/templates/category.mustache
+++ b/templates/category.mustache
@@ -24,17 +24,50 @@
                                 <a class="section_title main-page-link" href="{{{categoryurl}}}">{{categorytitle}}</a>
                             </h4>
                     {{^featuredcourse}}
-                        <div class="w-100 d-flex justify-content-center align-items-center flex-column section-page-sub-card" style="min-height: 100px">
-                            <div class="row">
-                                <h4 class="text-primary">{{nocoursemessage}}</h4>
-                            </div>
-                            {{#previousfuture}}
-                                <div class="row w-100 justify-content-between">
-                                    <a class="text-left" href="{{{previousjournalclubsink}}}" style="max-width:50%">< {{previousjournalclubstext}}</a>
-                                    <a class="text-right" href="{{{futurejournalclubslink}}}" style="max-width:50%">{{futurejournalclubstext}} ></a>
+                        {{^iselibrary}}
+                            {{#subcategorycourses}}
+                                {{#first}}
+                                    <a class="stretched-link main-page-link-wrapper" href="{{itemurl}}"></a>
+                                        <div class="card border-0 pb-0 section-page-sub-card">
+                                            <img class="card-img w-100 d-block section-page-sub-card-img no-border-radius" src="{{itemimg}}">
+                                            <div class="card-img-overlay justify-content-start align-items-end d-flex flex-column">
+                                                <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end">
+                                                    <span class="float-right main-page-jumbo-title d-flex flex-column card-text-over-picture p-2">
+                                                        <span class="main-page-link text-right">
+                                                            {{itemtitle}}
+                                                        </span>
+                                                        <span class="br text-right main-page-link main-page-sub-card-text">
+                                                            {{{itemdescription}}}
+                                                        </span>
+                                                        <span class="br text-right main-page-sub-card-text">
+                                                            <a class="main-page-link-sub text-white" href="{{{itemcaturl}}}">
+                                                            <small>
+                                                                {{itemcat}}
+                                                            </small>
+                                                            </a>
+                                                        </span>
+                                                    </span>
+                                                </h1>
+                                            </div>
+                            
+                                        </div>
+                                        
+                                    {{/first}}
+                            {{/subcategorycourses}}
+                        {{/iselibrary}}
+                        {{#iselibrary}}
+                            <div class="w-100 d-flex justify-content-center align-items-center flex-column section-page-sub-card" style="min-height: 100px">
+                                <div class="row">
+                                    <h4 class="text-primary">{{nocoursemessage}}</h4>
                                 </div>
-                            {{/previousfuture}}
-                        </div>
+                                {{#previousfuture}}
+                                    <div class="row w-100 justify-content-between">
+                                        <a class="text-left" href="{{{previousjournalclubsink}}}" style="max-width:50%">< {{previousjournalclubstext}}</a>
+                                        <a class="text-right" href="{{{futurejournalclubslink}}}" style="max-width:50%">{{futurejournalclubstext}} ></a>
+                                    </div>
+                                {{/previousfuture}}
+                            </div>
+                        {{/iselibrary}}
                     {{/featuredcourse}}
                     {{#featuredcourse}}
                         {{#first}}  
