--- a/templates/mainpage.mustache
+++ b/templates/mainpage.mustache
@@ -91,6 +91,7 @@
     {{/hasblocks}}
     <div id="page" data-region="mainpage" data-usertour="scroller" class="{{#courseindexopen}}show-drawer-left{{/courseindexopen}} {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container">
         <div id="topofscroll" class="main-inner">
+            {{{mainpagenotification}}}
             <div class="drawer-toggles d-flex">
                 {{#courseindex}}
                     <div class="drawer-toggler drawer-left-toggle open-nav d-print-none">
