--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -89,8 +89,8 @@
             {{$closebuttontext}}{{#str}}closeblockdrawer, core{{/str}}{{/closebuttontext}}
         {{/ theme_boost/drawer}}
     {{/hasblocks}}
-    <div id="page" data-region="mainpage" data-usertour="scroller" class="drag-container">
-        <div id="topofscroll" class="main-inner">
+    <div id="page" data-region="mainpage" data-usertour="scroller" class="drawers {{#courseindexopen}}show-drawer-left{{/courseindexopen}} {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container px-0">
+        <div id="topofscroll" class="main-inner px-0 mw-100">
             <div class="drawer-toggles d-flex">
                 {{#courseindex}}
                     <div class="drawer-toggler drawer-left-toggle open-nav d-print-none">
@@ -155,15 +155,17 @@
                         {{#sidebar}}
                         <div class="container main-page-container pt-0 pt-md-1">
                             <div class="row w-100 m-0">
-                                <div class="col col-12 col-lg-8 p-0 m-auto">
+                                <div class="col col-12 p-0 m-auto">
                                     {{{ output.main_content }}}
                                 </div>
-                                <div class="col col-12 col-lg-4">
-                                    <h4 class="text-center main-page-section-title pt-2 px-0">Related Content</h4>
-                                        {{#sidebaritems}}
-                                            {{> theme_apoa/lists/listitems/pagelist}}
-                                        {{/sidebaritems}}
-                                </div>
+                            </div>
+                            <h4 class="text-center main-page-section-title pt-2 px-0 mt-3">Related Content</h4>
+                            <div class="row w-100 m-0">
+                                {{#sidebaritems}}
+                                    <div class="col-sm-12  col-lg-4">
+                                        {{> theme_apoa/lists/listitems/pagelist}}
+                                    </div>
+                                {{/sidebaritems}}
                             </div>
                         </div>
                         {{/sidebar}}
