fixed spacing on standard layout

--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -3,7 +3,7 @@
     <video src="{{jumbobanner}}" class="main-page-jumbo-video main-page-main-image d-block" width="" height="315" autoplay="" muted="" loop="" poster="{{jumbobannerposter}}">
     </video>
     <div class="card-img-overlay justify-content-start align-items-center d-flex flex-column">
-        <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end m-0 m-sm-3">
+        <h1 class="d-flex main-page-jumbo-title-cont main-page-link align-items-center w-100 justify-content-end m-1">
             <p class="d-flex align-items-center w-100 text-white m-0">
                 <img class="float-left main-page-jumbo-logo" src="{{jumbobannerlogo}}">
                 <span class="main-page-sub-card-text px-2 main-page-jumbo-title-logo-text">
