--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -83,7 +83,7 @@
 
         {{/jumbovideoflag}}
         {{^jumbovideoflag}}
-        <div class="row text-center text-white align-content-center m-1 d-lg-flex d-none countdown" style="left:15%!important">
+        <div class="row text-center text-white align-content-center m-1 d-lg-flex d-none countdown">
         
             <div class="col-3 px-1" style="width: 140px">
                 <div class="countdowncont">
