fixed spacing on standard layout

--- a/templates/lists/listitems/pagelist.mustache
+++ b/templates/lists/listitems/pagelist.mustache
@@ -8,7 +8,7 @@
                         <div>
                             <p><span class="main-page-link card-summary-hide-mobile">{{{summary}}}</span>
                             <a href="{{caturl}}"><small class="main-page-link-sub">{{cat}}</small></a>
-                            <span>&nbsp;|&nbsp;</span><a href="{{{tagurl}}}"><small class="main-page-link-sub">{{tag}}</small></a></p>
+                            <span>&nbsp;|&nbsp;</span><a href="{{{tagurl}}}"><small class="main-page-link-sub">{{{tag}}}</small></a></p>
                         </div>
                     </div>
                 </div>
