--- a/templates/mainpage/subjumbo/subjumbolistitemwidetop.mustache
+++ b/templates/mainpage/subjumbo/subjumbolistitemwidetop.mustache
@@ -7,7 +7,7 @@
                 <div class="w-100">
                     <p class="mb-2 journal-card-text mw-50" style="font-size: smaller">
                         <span class="mw-100"><a class="main-page-link-sub d-inline-block text-truncate mw-100 text-white pr-1"href="{{itemcaturl}}">{{itemcat}}</a></span>
-                        <span>{{#itemtag}}<a class="main-page-link-sub border-left border-white pl-1 small text-white" href="{{{itemtagurl}}}">{{itemtag}}</a>{{/itemtag}}</span>
+                        <span>{{#itemtag}}<a class="main-page-link-sub border-left border-white pl-1 small text-white" href="{{{itemtagurl}}}">{{{itemtag}}}</a>{{/itemtag}}</span>
                     </p>
                 </div>
                 </div>
