--- a/templates/page.mustache
+++ b/templates/page.mustache
@@ -90,7 +90,7 @@
         {{/ theme_boost/drawer}}
     {{/hasblocks}}
     <div id="page" data-region="mainpage" data-usertour="scroller" class="drawers {{#courseindexopen}}show-drawer-left{{/courseindexopen}} {{#blockdraweropen}}show-drawer-right{{/blockdraweropen}} drag-container px-0">
-        <div id="topofscroll" class="main-inner px-0 mw-100">
+        <div id="topofscroll" class="main-inner px-0 pt-0 mt-0 mw-100">
             <div class="drawer-toggles d-flex">
                 {{#courseindex}}
                     <div class="drawer-toggler drawer-left-toggle open-nav d-print-none">
