corrected jumbo video

--- a/templates/loginform.mustache
+++ b/templates/loginform.mustache
@@ -163,7 +163,7 @@
     {{/hasidentityproviders}}
     {{#hasinstructions}}
         <div class="login-divider"></div>
-        <div class="login-instructions {{#cansignup}}mb-3{{/cansignup}}">
+        <div class="login-instructions {{#cansignup}}mb-3{{/cansignup}} text-primary border-accent p-3 bg-gray rounded">
             <h2 class="login-heading">{{#str}}firsttime{{/str}}</h2>
             {{{instructions}}}
         </div>
