--- a/templates/mainpage/jumbo/jumbomain.mustache
+++ b/templates/mainpage/jumbo/jumbomain.mustache
@@ -46,7 +46,7 @@
         {{#jumbovideoflag}}
         <div class="w-100 d-flex justify-content-end">
             <video class="main-page-jumbo-video main-page-jumbo-sub-video" width="560" height="315" poster="{{jumboSubPlaceholder}}" loop="" muted="" controls="">
-                <source src="{{jumbobanner}}" type="video/webm">
+                <source src="{{jumbovideo}}" type="video/webm">
             </video>
         </div>
         <div class="row text-center text-white align-content-center m-1 d-lg-flex d-none countdown" style="left:15%!important">
