added managed by apoaevents

--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -34,6 +34,7 @@
                     </div>
                     <div class="footer-section p-3">
                         <div>{{#str}}poweredbymoodle, core{{/str}}</div>
+                        <div>Managed by APOAEvents</div>
                         {{#output.moodle_release}}
                             <div>
                                 {{#str}}version, core{{/str}} {{{ output.moodle_release }}}
