fixed tags displaying

--- a/templates/drawers.mustache
+++ b/templates/drawers.mustache
@@ -160,6 +160,9 @@
                         {{{ output.course_content_footer }}}
 
                     </section>
+                     {{#hasblockscontent}}
+                        {{{blockshtmlcontent}}}
+                    {{/hasblockscontent}}
                 </div>
             </div>
         </div>
