--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,4 +1,4 @@
-<footer id="page-footer" class="footer-popover bg-primary text-white">
+<footer id="page-footer" class="footer-popover bg-primary text-white" style="z-index:2">
     <div class="container py-4 py-lg-5">
         <div class="row justify-content-center">
             <div class="col-sm-4 col-md-3 text-center text-lg-left d-flex flex-column">
@@ -34,7 +34,7 @@
                     </div>
                     <div class="footer-section p-3">
                         <div>{{#str}}poweredbymoodle, core{{/str}}</div>
-                        <div>Managed by APOAEvents</div>
+                        <div>Managed by APOA Events</div>
                         {{#output.moodle_release}}
                             <div>
                                 {{#str}}version, core{{/str}} {{{ output.moodle_release }}}
