--- a/templates/mainpage/subjumbo.mustache
+++ b/templates/mainpage/subjumbo.mustache
@@ -1,6 +1,6 @@
 <div class="row pt-3 mx-0 main-page-section-top-border">
 
-    <div class="col-md-6 col-lg-3 pb-3 px-0 px-lg-2 order-lg-2">
+    <div class="col-md-6 col-lg-4 pb-3 px-0 px-lg-2 order-lg-2">
         {{#subjumbo1}}
             {{{blocks.get_blocks}}}  
         {{/subjumbo1}}
@@ -8,7 +8,7 @@
             {{!{{> theme_apoa/mainpage/subjumbo/subjumbolist}}
         {{!{{/SectionHighlights}}
     </div>
-    <div class="col-md-6 col-lg-3 pb-3 px-0 px-lg-2 order-lg-3">
+    <div class="col-md-6 col-lg-4 pb-3 px-0 px-lg-2 order-lg-3">
         {{#subjumbo2}}
             {{{blocks.get_blocks}}}   
         {{/subjumbo2}}
@@ -16,7 +16,22 @@
            {{! {{> theme_apoa/mainpage/subjumbo/subjumbolist}}
         {{!{{/Newsletter}}
     </div>
+     <div class="col-md-6 col-lg-4 pb-3 px-0 px-lg-2 order-lg-3">
+        {{#subjumbo3}}
+            {{{blocks.get_blocks}}}   
+        {{/subjumbo3}}
+    </div>
+
+
+</div>
+<div class="row pt-3 mx-0 main-page-section-top-border">
+
     <div class="col-md-6 col-lg-6 col-md-12 pb-3 px-0 px-lg-2 order-lg-1" id="elibraryTabContainer">
+        {{#Elibrary}}
+            {{> theme_apoa/mainpage/subjumbo/subjumbolistwide}}
+        {{/Elibrary}}
+    </div>
+        <div class="col-md-6 col-lg-6 col-md-12 pb-3 px-0 px-lg-2" id="elibraryTabContainer">
         {{#Elibrary}}
             {{> theme_apoa/mainpage/subjumbo/subjumbolistwide}}
         {{/Elibrary}}
