--- a/templates/mainpage.mustache
+++ b/templates/mainpage.mustache
@@ -156,13 +156,20 @@
     </div>
     {{{ output.standard_after_main_region_html }}}
 </div>
+{{{output.main_page_modal}}}
+
+
+
+
 
 </body>
 </html>
 {{#js}}
 M.util.js_pending('theme_boost/loader');
+
 require(['theme_boost/loader', 'theme_boost/drawer'], function(Loader, Drawer) {
     Drawer.init();
     M.util.js_complete('theme_boost/loader');
+    
 });
 {{/js}}
