--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -1,4 +1,4 @@
-$primary: #2088A5 !default;
+$primary: #336667 !default;
 $secondary: #D4D29E !default; 
 $accent: #cb1e6f !default;
 $course-content-maxwidth: 90%!important;
