added functionality for mobile app

--- a/templates/mainpage/sectionlogo.mustache
+++ b/templates/mainpage/sectionlogo.mustache
@@ -1,8 +1,8 @@
 <div class="col mb-2">
     <a class="stretched-link main-page-link-wrapper" href="{{{sectionurl}}}"></a>
     <div class="card main-page-card main-page-sub-list-group-item h-100"><img class="card-img-top w-100 d-block main-page-section-icon mb-2" src="{{sectionimg}}">
-        <div class="d-flex flex-column justify-content-center card-body py-0">
-            <h5 class="card-title journal-card-sub-title mb-1 middle main-page-subsection-title main-page-link text-nowrap">{{sectionname}}</h5>
+        <div class="d-flex flex-column justify-content-center card-body p-0">
+            <h5 class="card-title journal-card-sub-title mb-1 middle main-page-subsection-title main-page-link text-nowrap w-100">{{sectionname}}</h5>
         </div>
     </div>
 </div>
