--- a/templates/mainpage/subjumbo.mustache
+++ b/templates/mainpage/subjumbo.mustache
@@ -1,6 +1,6 @@
 <div class="row pt-3 mx-0 main-page-section-top-border">
 
-    <div class="col-md-6 col-lg-3 pb-3 px-0 px-lg-2 order-lg-2">
+    <div class="col-md-6 col-lg-4 pb-3 px-0 px-lg-2 order-lg-2">
         {{#subjumbo1}}
             {{{blocks.get_blocks}}}  
         {{/subjumbo1}}
@@ -9,23 +9,29 @@
         {{!{{/SectionHighlights}}
     </div>
 
-    <div class="col-md-6 col-lg-3 pb-3 px-0 px-lg-2 order-lg-2">
-        {{#subjumbo2}}
-            {{{blocks.get_blocks}}}   
-        {{/subjumbo2}}
-        {{!{{#Newsletter}}
-           {{! {{> theme_apoa/mainpage/subjumbo/subjumbolist}}
-        {{!{{/Newsletter}}
+    <div class="col-md-12 col-lg-4 pb-3 px-0 px-lg-2 order-lg-2 order-3">
+        <h4 class="text-center main-page-section-title pt-2 p-1 px-0 main-page-link">
+                <a class="section_title main-page-link" href="{{{sectionurl}}}">Sections</a>
+            </h4>
+        <ul class="list-group flex-row flex-wrap justify-content-around"> 
+            
+                {{#sections}}
+                    {{> theme_apoa/mainpage/sectionlogoinline}}
+                {{/sections}}
+            </ul>
+            {{#subjumbo2}}
+                {{{blocks.get_blocks}}}   
+            {{/subjumbo2}}
+            
+            {{!{{#Newsletter}}
+            {{! {{> theme_apoa/mainpage/subjumbo/subjumbolist}}
+            {{!{{/Newsletter}}
     </div>
      <div class="col-md-6 col-lg-4 pb-3 px-0 px-lg-2 order-lg-3">
         {{#subjumbo3}}
             {{{blocks.get_blocks}}}   
         {{/subjumbo3}}
     </div>
-        <div class="col-md-6 col-lg-6 col-md-12 pb-3 px-0 px-lg-2 order-lg-1" id="elibraryTabContainer">
-        {{#Elibrary}}
-            {{> theme_apoa/mainpage/subjumbo/subjumbolistwide}}
-        {{/Elibrary}}
-    </div>
+
 
 </div>
