--- a/templates/mainpage/subjumbo.mustache
+++ b/templates/mainpage/subjumbo.mustache
@@ -13,7 +13,7 @@
         <h4 class="text-center main-page-section-title pt-2 p-1 px-0 main-page-link">
                 <a class="section_title main-page-link" href="{{{sectionurl}}}">Sections</a>
             </h4>
-        <ul class="list-group flex-row flex-wrap justify-content-around"> 
+        <ul class="list-group flex-row flex-wrap justify-content-around" style="border-radius: 0px"> 
             
                 {{#sections}}
                     {{> theme_apoa/mainpage/sectionlogoinline}}
