remove need for sections block

--- a/templates/mainpage/sections.mustache
+++ b/templates/mainpage/sections.mustache
@@ -1,7 +1,7 @@
 <div class="row py-3 mx-0 main-page-section-top-border">
     <div class="col pb-2">
         <h4 class="text-center">Explore our Sections</h4>
-        <p class="text-center">APOA has 12 subsections dedicated to specific fields of Orthopaedics</p>
+        <p class="text-center">The APOA has 13 subsections dedicated to specific fields of Orthopaedics</p>
     </div>
 </div>
 <div id='sectionscontainer' class="row row-cols-1 row-cols-sm-2 row-cols-xl-3 row-cols-xl-6 row-cols-md-3 row-cols-lg-4 justify-content-center" id="accordion-3" role="tablist">
