added addtional category layout, aswell as secondary nav links

--- a/templates/drawers.mustache
+++ b/templates/drawers.mustache
@@ -157,6 +157,7 @@
                         {{/overflow}}
                         {{{ output.main_content }}}
                         {{{ output.activity_navigation }}}
+                        {{{blockshtmlcontent}}}
                         {{{ output.course_content_footer }}}
 
                     </section>
