--- a/templates/drawers.mustache
+++ b/templates/drawers.mustache
@@ -157,7 +157,9 @@
                         {{/overflow}}
                         {{{ output.main_content }}}
                         {{{ output.activity_navigation }}}
-                        {{{blockshtmlcontent}}}
+                        {{^isdashboard}}
+                            {{{blockshtmlcontent}}}
+                        {{/isdashboard}}
                         {{{ output.course_content_footer }}}
 
                     </section>
