--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -1,4 +1,5 @@
 <footer id="page-footer" class="footer-popover bg-primary text-white" style="z-index:2">
+    {{{ output.view_on_mobile }}}
     <div class="container py-4 py-lg-5">
         <div class="row justify-content-center">
             <div class="col-sm-4 col-md-3 text-center text-lg-left d-flex flex-column">
@@ -66,8 +67,4 @@
     </div>
 
 </footer>
-{{#js}}
-require(['theme_boost/footer-popover'], function(FooterPopover) {
-    FooterPopover.init();
-});
-{{/js}}
+
