--- a/templates/view_on_mobile.mustache
+++ b/templates/view_on_mobile.mustache
@@ -2,9 +2,8 @@
         <button id="viewInAppButton" class="btn btn-icon bg-secondary icon-no-margin btn-footer-popover" 
             data-action="footer-popover" 
             aria-label="{{#str}}showfooter, theme_boost{{/str}}"
-            openAppUrl="{{appurl}}"
-            openAppUrlAlt="{{appurlalt}}">
-            {{#pix}}e/question, core{{/pix}}
+            openAppUrl="{{appurl}}">
+            {{#pix}}mobile, theme_apoa{{/pix}}
         </button>
 </div>
 {{#js}}
