--- a/templates/view_on_mobile.mustache
+++ b/templates/view_on_mobile.mustache
@@ -1,5 +1,6 @@
 <div data-region="footer-container-popover">
-        <button id="viewInAppButton" class="btn btn-icon bg-secondary icon-no-margin btn-footer-popover" 
+        <button id="viewInAppButton" class="btn btn-icon bg-secondary icon-no-margin btn-footer-popover"
+            style="display: block!important" 
             data-action="footer-popover" 
             aria-label="{{#str}}showfooter, theme_boost{{/str}}"
             openAppUrl="{{appurl}}">
