--- a/templates/view_on_mobile.mustache
+++ b/templates/view_on_mobile.mustache
@@ -1,6 +1,6 @@
 <div data-region="footer-container-popover">
         <button id="viewInAppButton" class="btn btn-icon bg-secondary icon-no-margin btn-footer-popover text-white"
-            style="display: block!important
+            style="display: block!important;
                 filter: drop-shadow(2px 4px 6px black);" 
             data-action="footer-popover" 
             aria-label="{{#str}}showfooter, theme_boost{{/str}}"
