--- a/templates/view_on_mobile.mustache
+++ b/templates/view_on_mobile.mustache
@@ -2,7 +2,7 @@
         <button id="viewInAppButton" class="btn btn-icon bg-secondary icon-no-margin btn-footer-popover text-white"
             style="display: block!important;
                 filter: drop-shadow(2px 4px 6px black);
-                background-color: #fae808;" 
+                background-color: #fae808!important;" 
             data-action="footer-popover" 
             aria-label="{{#str}}showfooter, theme_boost{{/str}}"
             openAppUrl="{{appurl}}">
