fixed shopping cart  buttons

--- a/templates/local_shopping_cart/addtocartdb.mustache
+++ b/templates/local_shopping_cart/addtocartdb.mustache
@@ -40,7 +40,7 @@
     }
 
 }}
-<div class="btn btn-secondary wb_shopping_cart booking-button-area "
+<div class="btn btn-secondary booking-button-area "
         id="btn-{{componentname}}-{{area}}-{{itemid}}"
         tabindex="0"
         data-itemid="{{itemid}}"
