added support for child themes to customise secondary

--- a/templates/local_shopping_cart/shopping_cart_item.mustache
+++ b/templates/local_shopping_cart/shopping_cart_item.mustache
@@ -65,7 +65,7 @@
         {{/imageurl}}
     </span>
     <span class="itemname">
-        {{itemname}}
+        {{{itemname}}}
     </span>
     {{#iscashier}}
         <span class="item-button pull-right">
