changed links for memebrship section

--- a/templates/mainpage/membership.mustache
+++ b/templates/mainpage/membership.mustache
@@ -8,7 +8,7 @@
                         Representing 24 Member chapters, more than 65,000 members from over 40 countries.&nbsp;<br>Become a member and 
                         join an active and diverse community of Orthopaedic surgeons and enjoy access to wealth of resources.</p>
                     <a class="btn btn-light btn-lg py-2 px-4 main-page-members-button" role="button" href="{{loginurl}}">Already a member?</a>
-                    <a class="btn btn-light btn-lg py-2 px-4 main-page-members-button" role="button" href="{{membershipsurl}}">Find out More</a>
+                    <a class="btn btn-light btn-lg py-2 px-4 main-page-members-button" role="button" href="{{membershipsurl}}">Join APOA</a>
                 </div>
             </div>
         </div>
