--- a/scss/bootstudio.scss
+++ b/scss/bootstudio.scss
@@ -25,6 +25,8 @@
 
   @media (min-width: 576px) {
     .main-modal-bg{
+      max-width: fit-content;
+      max-height: 90vh;
       display: block;
     }
     .main-modal-bg-mobile{
