--- a/templates/mainpage/mainmodal.mustache
+++ b/templates/mainpage/mainmodal.mustache
@@ -1,13 +1,13 @@
 {{#mainmodal}}
-<div class="modal fade p-0" id="mainModal" tabindex="-1" role="dialog" aria-labelledby="mainModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered main-modal-dialog" style="max-width: none" role="document">
-    <div class="modal-content">
+<div class="modal fade p-0 " id="mainModal" tabindex="-1" role="dialog" aria-labelledby="mainModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered main-modal-dialog w-auto justify-content-center" style="max-width: none" role="document">
+    <div class="modal-content w-auto">
       <div class="modal-header border-0">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body border-0 card-img-overlay">
+      <div class="modal-body border-0 card-img-overlay d-flex justify-content-center">
         <img class="card-img rounded-0 main-modal-bg" src="{{mainmodalbg}}" alt="Card image">
         <img class="card-img rounded-0 main-modal-bg-mobile" src="{{mainmodalbgmobile}}" alt="Card image">
         {{{mainmodalcontent}}}
