fixed issues for guests accessing lessons

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -197,9 +197,9 @@ top: 0%;
   
   
    
-  [data-flexitour="step-backdrop"]{
-    color: var(--primary)!important;
-  }
+  //[data-flexitour="step-backdrop"]{
+    //color: var(--primary)!important;
+  //}
 
 
 .tourstepcontainer{
